--- a/css/main.css
+++ b/css/main.css
@@ -544,8 +544,44 @@ video {
   }
 }
 
+.fixed {
+  position: fixed;
+}
+
+.absolute {
+  position: absolute;
+}
+
 .relative {
   position: relative;
+}
+
+.-top-2 {
+  top: -0.5rem;
+}
+
+.-top-56 {
+  top: -14rem;
+}
+
+.bottom-2 {
+  bottom: 0.5rem;
+}
+
+.left-0 {
+  left: 0px;
+}
+
+.left-full {
+  left: 100%;
+}
+
+.right-2 {
+  right: 0.5rem;
+}
+
+.top-0 {
+  top: 0px;
 }
 
 .mx-auto {
@@ -581,12 +617,87 @@ video {
   display: flex;
 }
 
+.grid {
+  display: grid;
+}
+
 .hidden {
   display: none;
 }
 
+.h-1\/4 {
+  height: 25%;
+}
+
 .h-1\/5 {
   height: 20%;
+}
+
+.h-2 {
+  height: 0.5rem;
+}
+
+.h-6 {
+  height: 1.5rem;
+}
+
+.h-screen {
+  height: 100vh;
+}
+
+.min-h-fit {
+  min-height: -moz-fit-content;
+  min-height: fit-content;
+}
+
+.w-2 {
+  width: 0.5rem;
+}
+
+.w-6 {
+  width: 1.5rem;
+}
+
+.w-7 {
+  width: 1.75rem;
+}
+
+.w-full {
+  width: 100%;
+}
+
+.w-screen {
+  width: 100vw;
+}
+
+.min-w-fit {
+  min-width: -moz-fit-content;
+  min-width: fit-content;
+}
+
+.translate-y-1\/2 {
+  --tw-translate-y: 50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.scale-125 {
+  --tw-scale-x: 1.25;
+  --tw-scale-y: 1.25;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+@keyframes pulse {
+  50% {
+    opacity: .5;
+  }
+}
+
+.animate-pulse {
+  animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+}
+
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
 .flex-col {
@@ -597,14 +708,44 @@ video {
   align-items: center;
 }
 
+.justify-end {
+  justify-content: flex-end;
+}
+
+.justify-center {
+  justify-content: center;
+}
+
 .justify-between {
   justify-content: space-between;
+}
+
+.justify-evenly {
+  justify-content: space-evenly;
+}
+
+.gap-3 {
+  gap: 0.75rem;
+}
+
+.space-x-3 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(0.75rem * var(--tw-space-x-reverse));
+  margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
 .space-y-9 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(2.25rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(2.25rem * var(--tw-space-y-reverse));
+}
+
+.overflow-hidden {
+  overflow: hidden;
+}
+
+.overflow-x-hidden {
+  overflow-x: hidden;
 }
 
 .rounded-full {
@@ -616,14 +757,33 @@ video {
   border-end-start-radius: 9999px;
 }
 
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
 .bg-brightRed {
   --tw-bg-opacity: 1;
   background-color: hsl(12 88% 59% / var(--tw-bg-opacity));
 }
 
+.bg-brightRedLight {
+  --tw-bg-opacity: 1;
+  background-color: hsl(12 88% 69% / var(--tw-bg-opacity));
+}
+
 .bg-veryPaleRed {
   --tw-bg-opacity: 1;
   background-color: hsl(13 100% 96% / var(--tw-bg-opacity));
+}
+
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-fixed {
+  background-attachment: fixed;
 }
 
 .p-2 {
@@ -691,6 +851,11 @@ video {
   line-height: 2.5rem;
 }
 
+.text-6xl {
+  font-size: 3.75rem;
+  line-height: 1;
+}
+
 .text-base {
   font-size: 1rem;
   line-height: 1.5rem;
@@ -699,6 +864,11 @@ video {
 .text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem;
+}
+
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
 }
 
 .font-bold {
@@ -728,6 +898,14 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.opacity-0 {
+  opacity: 0;
+}
+
+.opacity-25 {
+  opacity: 0.25;
+}
+
 .shadow-lg {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
@@ -739,12 +917,24 @@ video {
   --tw-shadow: var(--tw-shadow-colored);
 }
 
+.outline {
+  outline-style: solid;
+}
+
+.outline-white {
+  outline-color: #fff;
+}
+
 .transition {
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
+}
+
+html{
+  scroll-behavior: smooth;
 }
 
 body {
@@ -759,6 +949,215 @@ body {
   background-repeat: no-repeat;
   background-size: 800px;
   background-position: -80% -60%;
+}
+
+.circle{
+  animation: ripple 4s infinite;
+}
+
+.small-top-circle{
+  width: 200px;
+  height: 200px;
+  left: -100px;
+  top: -100px;
+  opacity: 0.7;
+}
+
+.medium-top-circle{
+  width: 400px;
+  height: 400px;
+  left: -200px;
+  top: -200px;
+  opacity: 0.5;
+}
+
+.large-top-circle{
+  width: 600px;
+  height: 600px;
+  left: -300px;
+  top: -300px;
+  opacity: 0.4;
+}
+
+.small-bottom-circle{
+  width: 200px;
+  height: 200px;
+  right: -100px;
+  bottom: -100px;
+  opacity: 0.7;
+}
+
+.medium-bottom-circle{
+  width: 400px;
+  height: 400px;
+  right: -200px;
+  bottom: -200px;
+  opacity: 0.5;
+}
+
+.large-bottom-circle{
+  width: 600px;
+  height: 600px;
+  right: -300px;
+  bottom: -300px;
+  opacity: 0.4;
+}
+
+.icon-slide-up {
+  animation: slide-left 2s forwards;
+}
+
+#icon-text-slide-right-animation {
+  animation: slide-right 2s ease-out;
+  animation-delay: 1s;
+}
+
+.hidden-text {
+  visibility: hidden;
+}
+
+#dots {
+  animation: spin .8s linear 4;
+}
+
+.arrow{
+  transform: scale3d(0.5, 0.5, 0.5);
+  animation: move-down 3s ease-out infinite;
+}
+
+.arrow:first-child{
+  animation: move-down 3s ease-out 1s infinite;
+  /* outline: 2px solid red; */
+}
+
+.arrow:nth-child(2){
+  animation: move-down 3s ease-out 2s infinite;
+  /* outline: 2px solid blue; */
+}
+
+.arrow:before, .arrow:after{
+  content: '';
+  position: absolute;
+  top: 0;
+  height: 100%;
+  width: 51%;
+  background-color: salmon;
+}
+
+.arrow:before{
+  left: 0;
+  transform: skew(0deg, 30deg);
+}
+
+.arrow:after{
+  right: 0;
+  width: 50%;
+  transform: skew(0deg, -30deg);
+}
+
+.scroll-down{
+  animation: fade-in 1s ease-in-out;
+  animation-delay: 3.5s;
+  visibility: hidden;
+}
+
+@keyframes fade-in{
+  from{
+    opacity: 0;
+  }
+
+  to{
+    opacity: 1;
+  }
+}
+
+@keyframes move-down{
+  25%{
+    opacity: 1;
+  }
+
+  33%{
+    opacity: 1;
+    transform: translateY(30px);
+  }
+
+  67%{
+    opacity: 1;
+    transform: translateY(40px);
+  }
+
+  100%{
+    opacity: 0;
+    transform: translateY(55px)
+        scale3d(0.5, 0.5, 0.5);
+  }
+}
+
+@keyframes ripple{
+  0%, 100%{
+    transform: scale(0.8);
+  }
+
+  50%{
+    transform: scale(0.9);
+  }
+}
+
+@keyframes slide-out {
+  from {
+    transform: translateY(0);
+  }
+
+  to {
+    transform: translateY(-100%);
+  }
+}
+
+@keyframes slide-left {
+  from {
+    transform: translateX(0%);
+  }
+
+  to {
+    transform: translateX(-100%);
+  }
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg)
+  }
+}
+
+@keyframes slide-right {
+  from {
+    transform: translateX(-200px);
+  }
+
+  to {
+    transform: translateX(0);
+  }
+}
+
+@keyframes slide-down {
+  from {
+    transform: translateY(0);
+  }
+
+  to {
+    transform: translateY(20%);
+  }
+}
+
+@keyframes slide-up {
+  from {
+    transform: translateY(600%);
+  }
+
+  to {
+    transform: translateY(0);
+    scale: 1.25;
+  }
 }
 
 @media (max-width: 576px) {
